# JUCE-dev-template

./: CMakeLists.txt  README.md
cmake/: cpm.cmake
plugin/: CMakeLists.txt
plugin/include/PluginName/: PluginEditor.h
plugin/include/plugin/: PluginEditor.h
plugin/source/PluginName/: PluginEditor.cpp  PluginProcessor.cpp
plugin/source/plugin/: PluginEditor.cpp  PluginProcessor.cpp
test/: CMakeLists.txt
test/source/: AudioProcessorTest.cpp
